# GPGPU_self_study

./: .gitignore  .gitmodules
1D_advection_FCT/cuda/: CMakeLists.txt  advection.cpp  advection_alloc.h  advection_kernels.cu
1D_advection_FCT/hipSYCL/: CMakeLists.txt  advection.cpp
1D_advection_FCT/kokkos/: .gitignore  CMakeLists.txt  advection.cpp  spack.yaml
1D_advection_FCT/oneapi/: CMakeLists.txt  advection.cpp
1D_advection_FCT/openacc/: CMakeLists.txt  advection.cpp
1D_advection_FCT/python_mms/: pyproject.toml
1D_advection_FCT/python_validation/: pyproject.toml
1D_advection_FCT/python_validation/src/: fdm_validation_utility.py
1D_advection_FCT/python_validation/src/fdm_validation_utility/: __init__.py  calculate_error.py  cli.py  convergence.py  end_1024_sine.h5  initial_conditions.py  problem_state.py  toml_utils.py
1D_advection_FCT/raja/: CMakeLists.txt  advection.cpp
1D_advection_FCT/sycl/: CMakeLists.txt  advection.cpp
1D_advection_FCT/utils/: advection_output.cpp  advection_output.h  advection_utils.cpp  advection_utils.h
2D_heat_transfer_FDM/oneapi/: CMakeLists.txt  heat_solve.cpp
2D_heat_transfer_FDM/python_example/: mgpcg.py
2D_heat_transfer_FDM/python_validation/: pyproject.toml
2D_heat_transfer_FDM/python_validation/src/fdm_heat_validation_utility/: __init__.py  calculate_diff.py  cli.py  initial_conditions.py  model_utils.py
2D_heat_transfer_FDM/utils/: model_data.cpp  model_data.h  model_utils.cpp  model_utils.h
2D_heat_transfer_FEM/: implementation_notes.html  implementation_notes.pdc
ansible/: cuda_setup.yml  general_setup.yml  intel_setup.yml  kokkos_setup.yml  raja_setup.yml  triSYCL_setup.yml  trisycl_setup.yml
singularity/: add-repos-ubuntu.sh  base-ubuntu-18.04.def
