[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fdm_mms_utility"
author = "Jonathan Robey"
author-email = "class4kayaker@gmail.com"
description-file = "README.md"
license = "MIT"
requires-python = "~=3.6"
requires = [
]

[tool.black]
line-length=79
